<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.ferdidrgn.theatreticket.ui.stage.StageViewModel" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/ScreenBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.stage.StageActivity">

        <include
            android:id="@+id/mapMarker"
            layout="@layout/stage_map_marker"
            android:visibility="gone" />

        <com.ferdidrgn.theatreticket.tools.components.CustomToolbar
            android:id="@+id/customToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cst_toolbar_backIcon_visible="true"
            app:cst_toolbar_text="@string/stage_desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            ads:adSize="BANNER"
            ads:adUnitId="@string/BANNER_ADS_TEST"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintStart_toStartOf="parent"
            ads:layout_constraintTop_toBottomOf="@id/customToolbar" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/adView">

            <LinearLayout
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:clickable="false"
                android:focusable="false"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">


                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/cvStage"
                        style="@style/ImgStrokeColor2"
                        android:layout_width="160dp"
                        android:layout_height="160dp"
                        app:cardCornerRadius="10dp"
                        app:strokeWidth="3dp">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/imgStage"
                            style="@style/ShapeableImageViewStyle"
                            imageUrl="@{viewModel.stage.imgUrl}"
                            android:layout_width="160dp"
                            android:layout_height="160dp"
                            tools:src="@drawable/ic_home" />
                    </com.google.android.material.card.MaterialCardView>

                    <com.ferdidrgn.theatreticket.tools.components.CustomEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textAlignment="textStart"
                        app:custom_edit_hint="@string/stage_name"
                        app:custom_edit_text="@={viewModel.stage.name}" />

                    <com.ferdidrgn.theatreticket.tools.components.CustomEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textAlignment="textStart"
                        app:custom_edit_hint="@string/stage_desc"
                        app:custom_edit_text="@={viewModel.stage.description}" />

                    <com.ferdidrgn.theatreticket.tools.components.CustomEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textAlignment="textStart"
                        app:custom_edit_hint="@string/capacity"
                        app:custom_edit_text="@={viewModel.stage.capacity}" />

                    <com.ferdidrgn.theatreticket.tools.components.CustomEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textAlignment="textStart"
                        app:custom_edit_hint="@string/address"
                        app:custom_edit_text="@={viewModel.stage.address}" />

                    <com.ferdidrgn.theatreticket.tools.components.CustomEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textAlignment="textStart"
                        app:custom_edit_hint="@string/communication"
                        app:custom_edit_text="@={viewModel.stage.communication}" />


                    <TextView
                        style="@style/TextColor2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="40dp"
                        android:layout_marginTop="30dp"
                        android:text="@string/stage_location"
                        android:textSize="20sp" />

                    <com.google.android.material.card.MaterialCardView
                        style="@style/CardBackgroundTint_StrokeColor"
                        android:layout_width="match_parent"
                        android:layout_height="350dp"
                        android:layout_marginHorizontal="40dp"
                        android:layout_marginTop="20dp"
                        app:cardCornerRadius="20dp"
                        app:cardElevation="5dp">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <com.google.android.gms.maps.MapView
                                android:id="@+id/expandedMap"
                                android:name="com.google.android.gms.maps.SupportMapFragment"
                                android:layout_width="0dp"
                                android:layout_height="0dp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />
                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </com.google.android.material.card.MaterialCardView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="40dp"
                        android:layout_marginTop="10dp"
                        android:clipToPadding="false"
                        android:nestedScrollingEnabled="false"
                        android:overScrollMode="never"
                        android:text="@{viewModel.stage.address}"
                        tools:text="@string/stage_location" />


                </LinearLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>